# KB-Copilot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: README.md  __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  conversations.py  documents.py  feedback.py  health.py  index_jobs.py  metrics.py  search.py  suggestions.py  tools.py
backend/app/core/: config.py  dependencies.py  exceptions.py  metrics.py
backend/app/domain/: chunks.py  conversations.py  documents.py  index_jobs.py
backend/app/graph/: __init__.py  graph.py  nodes.py  state.py
backend/app/integrations/: embedding.py  llm.py  minio_storage.py  qdrant.py
backend/app/repositories/: __init__.py  conversations.py  documents.py  index_jobs.py
backend/app/schemas/: chat.py  conversations.py  documents.py  feedback.py  index_jobs.py  search.py  suggestions.py
backend/app/services/: document_index_service.py  document_loader.py  rag_service.py  text_splitter.py
backend/app/tools/: __init__.py  base.py  business_tools.py  order_query.py  registry.py
backend/app/workers/: index_worker.py
backend/tests/: test_intent_routing.py  test_text_splitter.py  test_tools.py
docs/: BEGINNER_AGENT_IMPLEMENTATION.md  CODE_LEARNING_GUIDE.md  ITERATION_PLAN.md  MVP1.md  MVP1_5_PLAN.md  MVP2.md  MVP2_PLAN.md  MVP3.md  MVP3_PLAN.md  MVP4.md  PRODUCT_BACKLOG.md
examples/: sample.md
frontend/: .dockerignore  README.md  index.html  package.json  (+2 more)
(+37 files in other folders)
